--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
   <head>
     <title>wetware</title>
     <meta charset="utf-8"/>
+    <link re="stylesheet" href="normalize.css"/>
+    <link rel="stylesheet" href="style.css"/>
   </head>
-  <body>
-    <h1>wetware</h1>
+  <body class="App">
+    <span class="App-bar App-barOne"></span>
+    <span class="App-bar App-barTwo"></span>
+    <div class="App-headerContainer">
+      <header class="Header">
+        <h1 class="Header-title">wetware</h1>
+      </header>
+    </div>
+    <div class="App-trailerContainer">
+      <iframe class="Trailer" width="853" height="480" src="https://www.youtube.com/embed/iK7YrsoH_SM?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+    <div>
+    <div class="App-descriptionContainer">
+      <div class="Description">
+        <p class="Description-text">A surrealist point and click adventure exploring the insanity of the logical extremes of current-day AR and VR technology.</p>
+        <p class="Description-text" style="display: flex; align-items: center;">Try out the free training simulation teaser available for Android (Google Cardboard required): <a href='https://play.google.com/store/apps/details?id=com.Sloppyware.WetwareTraining&hl=en&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img style="width: 200px;" alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a></p>
+      </div>
+    </div>
   </body>
 </html>
